--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>Hot and Cold React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="container" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
